--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "express": "^4.17.1",
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.28",
-    "mongoose-unique-validator": "^2.0.3"
+    "mongoose-unique-validator": "^2.0.3",
+    "underscore": "^1.10.2",
+    "validator": "^13.1.1"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
