--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongodb": "^3.6.0",
     "mongoose": "^5.9.28",
     "mongoose-unique-validator": "^2.0.3",
+    "morgan": "^1.10.0",
     "underscore": "^1.10.2",
     "validator": "^13.1.1"
   },
