--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
+    "dayjs": "^1.8.35",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongodb": "^3.6.0",
